--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -9,3 +9,13 @@
 .prose strong {
   @apply font-extrabold;
 }
+
+.bpd-project-tile {
+  min-height: 33vh;
+}
+
+@media screen and (min-width: 768px) {
+  .bpd-project-tile {
+    min-height: 180px;
+  }
+}
