--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -19,3 +19,15 @@
     min-height: 180px;
   }
 }
+
+@media screen and (min-width: 1400px) {
+  .bpd-project-tile {
+    min-height: 22vh;
+  }
+}
+
+@media screen and (min-width: 1800px) {
+  .bpd-project-tile {
+    min-height: 20vh;
+  }
+}
