fade in effect on first page

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -31,3 +31,20 @@
     min-height: 20vh;
   }
 }
+
+body {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-delay: 800ms;
+  opacity: 0;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
