--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -32,6 +32,42 @@
   }
 }
 
+.bpd-hero {
+  overflow-y: hidden;
+}
+@media (max-width: 767px) {
+  .bpd-hero {
+    min-height: 50vh;
+    @apply max-w-full;
+    @apply overflow-x-hidden;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1400px) {
+  .bpd-hero {
+    min-height: 600px;
+  }
+}
+@media (min-width: 1401px) {
+  .bpd-hero {
+    min-height: 680px;
+  }
+}
+
+@media (min-aspect-ratio: 4/3) {
+  .bpd-hero-foreground {
+    height: 300%;
+    transform: translate3d(0, -33%, 0);
+  }
+}
+
+@media (max-aspect-ratio: 4/3) {
+  .bpd-hero-foreground {
+    width: 300%;
+    transform: translate3d(-33%, 0, 0);
+  }
+}
+
 body {
   animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
