--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -28,11 +28,12 @@
 }
 
 .bpd-project-tile {
-  min-height: 33vh;
+  aspect-ratio: 1.99 / 1;
 }
 
 @media screen and (min-width: 1024px) {
   .bpd-project-tile {
+    aspect-ratio: unset;
     min-height: 180px;
   }
 }
