button cursor pointer

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @config '../tailwind.config.js';
 
@@ -17,6 +17,12 @@
   ::backdrop,
   ::file-selector-button {
     border-color: var(--color-gray-200, currentcolor);
+  }
+}
+
+@layer theme {
+  button {
+    @apply cursor-pointer;
   }
 }
 
